# lib-cpp-algebra

./: CMakeLists.txt  Matriz2D.h  README.md  algebra.cpp  algebra.h  libCPP_Algebra_global.h
